src/manipulator/snapshots/annatto__manipulator__map__tests__fail_deserialization_with_bad_query.snap
---
source: src/manipulator/map.rs
expression: rule.err().unwrap()
---
TOML parse error at line 2, column 17
  |
2 |         query = "annis:tok @* doc"
  |                 ^^^^^^^^^^^^^^^^^^
Error in query:
`annis:tok @* doc`
[0:7-0:9] Unexpected token in query. Expected one of: ID
